# bookdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.markdown  README.md  bookdb.cabal  docker-compose.yml  example-config.yaml  flake.nix  migrate-0x-to-1x.sql  pyproject.toml  requirements-freeze.txt  requirements.txt  rust-toolchain.toml  stack.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml
bookdb/: __init__.py  __main__.py  codes.py  common.py  dirs.py  errors.py  serve.py
bookdb/index/: __init__.py  create.py  dump.py
bookdb/models/: __init__.py  book.py
bookdb/static/: bookdb.js  script.js  style.css
bookdb/templates/: _layout.html  bookform.mako  bookinfo.mako  booklist.mako  confirmdelete.mako  delete.html  edit.html  error.html  info.html  information.mako  search.mako  utils.py  wrapper.mako
bookdb/utils/: covers.py  dirs.py  errors.py  mutable.py  template.py
bookdb/views/: book.py  booklist.py  mutate.py
concourse/: pipeline.yml
config/: elasticsearch-schema.yaml  uuids.yaml
examples/: bookdb.conf  nginx.conf
src/: Configuration.hs  Database.hs  Main.hs  Requests.hs  Routes.hs  Server.hs  Types.hs  Web.hs  book.rs  common.py  config.rs  create-index.py  dump-index.py  es.rs  index.rs  lib.rs  main.rs  serve.py  web.rs
src/Handler/: Edit.hs  Information.hs  List.hs  Stats.hs  Templates.hs  Utils.hs
src/Requests/: Types.hs
src/Server/: Requests.hs
src/Server/Requests/: Types.hs
src/es/: es_serde_1.rs  legacy.rs  mod.rs
src/resources/: search.html.tera  style.css
src/static/: script.js  style.css
src/templates/: _layout.html  delete.html  edit.html  search.html
src/web/: endpoints.rs  errors.rs  mod.rs  model.rs  multipart.rs  state.rs
src/web/_resources/: delete.html.tera  edit.html.tera  error.html.tera  notice.html.tera  search.html.tera  style.css
static/: script.js  style.css
templates/: confirm_delete.hamlet  edit_form.hamlet  information.hamlet  list.hamlet  search.hamlet  stats.hamlet  wrapper.hamlet
tests/: test_codes.py
util/: convert-pgdump-to-json.py
