[package]
name = "bookdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
clap = { version = "4", features = ["derive", "env"] }
elasticsearch = "8.17.0-alpha.1"
lazy_static = "1"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10.8"
tempfile = "3"
tera = "1"
time = { version = "0.3", features = ["macros", "parsing", "serde", "serde-human-readable"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1"
