[tool.poetry]
name = "bookdb"
version = "0"
description = "A database and web app to keep track of all my books."
authors = ["Michael Walker <mike@barrucadu.co.uk>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^8.8.0"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = "bookdb.serve:run"
create-index = "bookdb.index.create:run"
dump-index = "bookdb.index.dump:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
hypothesis = "^6.77.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
