[tool.poetry]
name = "bookdb"
version = "0"
description = "A database and web app to keep track of all my books."
authors = ["Michael Walker <mike@barrucadu.co.uk>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^8.8.2"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = "bookdb.serve:run"
create-index = "bookdb.index.create:run"
dump-index = "bookdb.index.dump:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
hypothesis = "^6.81.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
