[tool.poetry]
name = "bookdb"
version = "0"
description = "A database and web app to keep track of all my books."
authors = ["Michael Walker <mike@barrucadu.co.uk>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^8.9.0"
Flask = "^2.3.3"
gunicorn = "^21.2.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = "bookdb.serve:run"
create-index = "bookdb.index.create:run"
dump-index = "bookdb.index.dump:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.84.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
